Added ability to display images on the page

--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -16,6 +16,9 @@
     <button type="submit">Search</button>
   </form>
   <img id="loadingImage" src="https://i.imgur.com/LVHmLnb.gif">
+  <section class="images">
+    
+  </section>
   <script type='text/javascript' src='config.js'></script>
   <script src="main.js"></script>
 </body>
